--- a/readme.html
+++ b/readme.html
@@ -9,16 +9,16 @@
     <meta name="format-detection" content="telephone=no">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes">
     <meta name="ROBOTS" content="NOINDEX">
-    <meta property="og:url" content="https://www.barunsonmcard.com/m/august10th">
+    <meta property="og:url" content="https://mosfet1kg.github.io/wedding/readme">
     <meta property="og:title" content="규범♡혜연의 결혼식에 초대합니다.">
     <meta property="og:type" content="website">
-        <meta property="og:image" content="https://resources.barunsonmcard.com/upload/invitation/240616/634593/b8647c57-7819-4e05-9843-3429e7091690.jpg">
+        <meta property="og:image" content="./mobile_cards_files/b8647c57-7819-4e05-9843-3429e7091690.jpg">
         <meta property="og:image:width" content="586">
         <meta property="og:image:height" content="492">
     <meta property="og:description" content="바른손카드 모바일청첩장">
     <meta property="fb:app_id" content="555274031340396">
 
-    <title>바른손카드 모바일청첩장</title>
+    <title>모바일청첩장</title>
 
     <link rel="stylesheet" href="./mobile_cards_files/photoswipe.css">
     <link rel="stylesheet" href="./mobile_cards_files/swiper-bundle.min.css">
